# cloud-rom

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backlog/: config.yml
docs/: MODEL_EXTRACTION.md  README.md  berton-2023-pdftotext.txt  berton-2023-raw.txt  berton2023-model-code.md  berton_3d_auto_task007_validation.md  berton_3d_hopf_analysis_summary.md  berton_3d_hopf_briefing.md  berton_full_auto_task008_design.md  berton_full_auto_task009_validation.md  berton_full_auto_task010_continuation.md  notebooks.md
episodes/: README.md
notebooks/: berton_3d_auto_task007_validation.ipynb  berton_full_auto_task010_continuation.ipynb  replicate-oscillatory-state.ipynb  replicate-steady-state.ipynb
references/: README.md
scripts/: berton_3d_auto_task007_validate.py  berton_3d_hopf_task001_symbolic.py  berton_3d_hopf_task002_rzeta_sign.py  berton_3d_hopf_task005_classification.py  berton_full_auto_task009_validate.py  berton_full_auto_task010_analyze.py
tests/: test_berton2023.py  test_berton_3d_auto_task007_validate.py  test_berton_3d_hopf_analysis_summary.py  test_berton_3d_hopf_task001_symbolic.py  test_berton_3d_hopf_task002_rzeta_sign.py  test_berton_3d_hopf_task003_root_tracking.py  test_berton_3d_hopf_task004_singular_reduction.py  test_berton_3d_hopf_task005_classification.py  test_berton_full_auto_task009_validate.py  test_berton_full_auto_task010_analyze.py  test_episode02_reduced_cas_classification.py  test_episode02_reduced_cas_root_tracking.py  test_episode02_reduced_cas_rzeta_sign.py  test_episode02_reduced_cas_singular_reduction.py  (+23 more)
(+401 files in other folders)
