[project]
name = "cloud-rom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pint>=0.25.3",
    "scipy>=1.17.1",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_rom"]
